# wine_quality

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  celery_app.py  celerybeat-schedule.db  dump.rdb  fastapi_test.py  pyproject.toml  tasks.py
data/processed/: features.csv  item.txt  test_features.csv  test_predictions.csv
models/: model.pkl
notebooks/: eda.ipynb
src/modeling/: main.py  predict copy.py  predict.py  train.py
