[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Data Science Project"
authors = [
  { name = "chinster202" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "celery>=5.6.0",
    "fastapi[standard]>=0.124.2",
    "loguru",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pip",
    "pytest",
    "python-dotenv",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "ruff",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
    "xgboost>=3.1.2",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

